# shell

./: .gitignore  build.nix  deps.txt  flake.nix  frontend.nix  package.json  shell.nix  vite.config.js
nix/: bun.nix  frontend.nix
pkgs/3d-git/: package.json
pkgs/3d-git/src/lib/: Canvas.svelte  Scene.svelte  index.ts
src/: app.html  styles.css
src-tauri/: Cargo.toml  default.nix  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  hyprland_commands.rs  hyprland_events.rs  lib.rs  sv_commands.rs
src-tauri/src/cmds/: application.rs  hyprland.rs  menu.rs  mod.rs  sysinfo.rs  windows.rs
src-tauri/src/hypr/: commands.rs  events.rs
src-tauri/src/libs/: application.rs  mod.rs
src-tauri/src/os/: apps.rs  mod.rs  stats.rs
src-tauri/src/setup/: bar.rs  hyprland.rs  launcher.rs  mod.rs
src/lib/: Bar.svelte  Launcher.svelte  cmds.ts  state.svelte.ts  types.d.ts
src/lib/bar/: Bar.svelte
src/lib/bar/widgets/: ActiveClient.svelte  Battery.svelte  Clock.svelte  Disks.svelte  Icon.svelte  SysInfo.svelte  SysInfoIcon.svelte  Workspaces.svelte
src/lib/components/: FileSystem.svelte  view-transition.svelte
src/lib/components/ui/: Button.svelte
src/lib/launcher/: AppsList.svelte  DisksInfo.svelte  Help.svelte  Input.svelte  Launcher.svelte  apps.svelte.ts  launcher.svelte.ts  types.d.ts
src/lib/launcher/plugins/: AppsList.svelte  Help.svelte  NixPkgs.svelte  types.d.ts
src/lib/launcher/plugins/apps/: AppCard.svelte  Plugin.svelte  helpers.ts
src/lib/launcher/plugins/nixpkgs/: NixPkgCard.svelte  Plugin.svelte  helpers.ts
src/lib/state/: activeClient.svelte.ts  sysInfo.svelte.ts  tauri.svelte.ts  whatcher.svelte.ts  workspaces.svelte.ts
src/lib/utils/: index.ts
src/lib/utils/context-menu/: index.ts  types.ts
src/lib/widgets/: ActiveClient.svelte  Battery.svelte  Hostname.svelte  SysInfo.svelte  Workspaces.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte  Clock.svelte
src/routes/app/: +layout.svelte  +page.svelte
src/routes/app/dev/: +page.svelte
src/routes/app/settings/: +page.svelte
src/routes/bar/: +page.svelte
src/routes/launcher/: +page.svelte
src/routes/splashscreen/: +page.svelte
(+3 files in other folders)
