[package]
name = "shell"
version = "0.1.0"
description = "My custom linux shell"
authors = ["eu@andrebrandao.dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gdk = "0.18.2"
gtk = "0.18.2"
glib = "0.18.5"
gio = "0.18.4"
gtk-layer-shell = { version = "0.8.2", features = ["v0_6"] }
hyprland = "0.4.0-beta.1"
sysinfo = "0.35.2"
